test/arrays/errors/arrOfRanges.chpl
config const n = 10;
for j in [1..n,] do writeln(j);
for i in [1..n] do writeln(i);
for l in [1..n, 1..n,] do writeln(l);
for k in [1..n, 1..n] do writeln(k);
